--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,11 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
     implementation 'morxander.editcard:EditCard:1.0.1'
-    implementation 'com.stripe:stripe-android:13.0.0'
+
+    implementation 'com.loopj.android:android-async-http:1.4.9'
+    implementation 'com.braintreepayments.api:braintree:2.+'
+    implementation 'com.braintreepayments.api:drop-in:3.7.1'
+
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'org.jetbrains.anko:anko-commons:0.10.8'
     implementation 'com.squareup.picasso:picasso:2.71828'
