Chaged order from parcelable to serializable

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,8 +7,8 @@
          location permissions for the 'MyLocation' functionality.
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:name=".Stepper"
@@ -18,7 +18,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ConfirmActivity"></activity>
+        <activity android:name=".SelectAssemblyActivity"></activity>
+        <activity android:name=".SelectDistanceActivity" />
+        <activity android:name=".ConfirmActivity" />
         <activity android:name=".PaymentActivity" />
         <activity android:name=".PersonalDetailsActivity" />
         <activity android:name=".SelectGuysActivity" />
